<resources>
    <string name="app_name">FrontEndEssentials</string>
    <string name="menu_option_1">Home</string>
    <string name="menu_option_2">Search</string>
    <string name="menu_option_3">Minifiers</string>
    <string name="menu_option_4">Graphics</string>
    <string name="menu_option_5">Calculators</string>
    <string name="menu_option_6">Templates</string>
    <string name="main_button_1">Search</string>
    <string name="main_button_2">Min/Unmin</string>
    <string name="main_button_3">Graphics</string>
    <string name="main_button_4">Calculators</string>
    <string name="main_button_5">Templates</string>
    <string name="main_text">Welcome Back!</string>
    <string name="calc_text">I am a calculator!</string>
    <string name="template_text">Template storage is under construction!</string>
    <string name="search_text">Choose the site you wish to browse:</string>
    <string name="graph_text">The graphics tool is under construction!</string>
    <string name="btn_calculate">Calculate!</string>
    <string name="calc_1">px to vw</string>
    <string name="calc_px">px</string>
    <string name="calc_em">em</string>
    <string name="calc_text_px_to_em"><u>px to em</u></string>
    <string name="calc_default_px">default px size</string>
    <string name="calc_text_em_to_px"><u>em to px</u></string>
    <string name="calc_text_px_to_rem"><u>px to rem</u></string>
    <string name="calc_percent_to_px">percent to px</string>
    <string name="calc_percent">%</string>
    <string name="calc_vh_to_pxx">vh to px</string>
    <string name="calc_vh_to_px">vh to px</string>
    <string name="calc_Viewport_Height">viewport height</string>
    <string name="calc_vh">vh</string>
    <string name="calc_px_to_vw">px to vw</string>
    <string name="calc_vw_to_px">vw to px</string>
    <string name="calc_vw">vw</string>
    <string name="calc_rem">rem</string>
    <string name="calc_rem_to_px">rem to px</string>
    <string name="calc_px_to_rem">px to rem</string>
    <string name="calc_text_px_to_vh">px to vh</string>
    <string name="calc_text_px_to_percent">percent</string>
    <string name="minunmin_css_min">CSS to minify:</string>
    <string name="btn_sendMinify">Minify!</string>
    <string name="text_output_minify">Minified CSS</string>
    <string name="calc_Viewport_Width">Viewport Width</string>
    <string name="min_text">Choose, what do you want to minify:</string>
    <string name="minunmin_js_min">JavaScript to minify:</string>
    <string name="text_output_minify_js">Minified JavaScript</string>
    <string name="csstricks">CSS Tricks</string>
    <string name="w3s">W3Schools</string>
    <string name="gfont">Google Font</string>
    <string name="dafont">Dafont</string>
    <string name="conversion_title">Choose the conversion:</string>
    <string name="svg_to_png">SVG to PNG</string>
    <string name="png_to_svg">PNG to SVG</string>
    <string name="update_record">Update Template</string>
    <string name="enter_name">Enter Template Name</string>
    <string name="template_code">Template Code</string>
    <string name="update">UPDATE</string>
    <string name="cancel">CANCEL</string>
    <string name="name">Template Name</string>
    <string name="add_template">ADD TEMPLATE</string>
    <string name="all_the_inserted_templates">All the inserted templates</string>
    <string name="no_templates_available">No templates in the database.</string>
    <string-array name="calc_spinner_string">
        <item>Choose an option:</item>
        <item>Px to Em</item>
        <item>Em to Px</item>
        <item>Px to Rem</item>
        <item>Rem to Px</item>
        <item>Px to Percent</item>
        <item>Percent to Px</item>
        <item>Px to Vw</item>
        <item>Vw to Px</item>
        <item>Px to Vh</item>
        <item>Vh to Px</item>
    </string-array>
    <string-array name="minifier_spinner_string">
        <item>Choose an option:</item>
        <item>CSS Minifier</item>
        <item>JS Minifier</item>
    </string-array>

</resources>