<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/Test"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_text"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_marginTop="100dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <Button
        android:id="@+id/FirstBtn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_margin="5dp"
        android:backgroundTint="@color/c4"
        android:text="@string/main_button_1"
        android:onClick="onOptionSearch"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Test" />
    <Button
        android:id="@+id/SecondBtn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_margin="5dp"
        android:backgroundTint="@color/c3"
        android:text="@string/main_button_2"
        android:onClick="onOptionMinUnmin"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/FirstBtn" />
    <Button
        android:id="@+id/ThirdBtn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_margin="5dp"
        android:backgroundTint="@color/c4"
        android:text="@string/main_button_3"
        android:onClick="onOptionGraph"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/SecondBtn" />
    <Button
        android:id="@+id/FourthBtn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_margin="5dp"
        android:backgroundTint="@color/c3"
        android:text="@string/main_button_4"
        android:onClick="onOptionCalc"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ThirdBtn" />
    <Button
        android:id="@+id/FifthBtn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_margin="5dp"
        android:backgroundTint="@color/c4"
        android:text="@string/main_button_5"
        android:onClick="onOptionTemp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/FourthBtn" />
</androidx.constraintlayout.widget.ConstraintLayout>