<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MinCSSMin">


        <TextView
            android:id="@+id/text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/minunmin_css_min"
            android:gravity="center"
            android:textSize="20sp"
            android:textColor="@color/black"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
        <EditText
            android:id="@+id/input_text_view1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lines="4"
            android:gravity="center"
            android:layout_margin="8dp"
            android:textSize="20sp"
            android:background="@color/c3"
            android:textColorHint="@color/c2"
            android:inputType="textMultiLine"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text1" />

    <Button
        android:id="@+id/sendMinify"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_sendMinify"
        android:onClick="onSendCSSMinify"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_text_view1" />
    <TextView
        android:id="@+id/output_text_minify"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_output_minify"
        android:gravity="center"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sendMinify" />
    <TextView
        android:id="@+id/output_minify"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:lines="4"
        android:gravity="center"
        android:layout_margin="8dp"
        android:textSize="20sp"
        android:background="@color/c3"
        android:textColorHint="@color/c2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/output_text_minify" />

</androidx.constraintlayout.widget.ConstraintLayout>